# CMake-SDCC_51example

./: .gitignore  CMakeLists.txt  README.md
include/: LCD1602.h  timer.h
output/: test.hex
src/: CMakeLists.txt  LCD1602.c  main.c  timer.c
tool/: STC89xx.h
